WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186420
PopStateEvent should not be cancelable by default
https://bugs.webkit.org/show_bug.cgi?id=186420
Summary
PopStateEvent should not be cancelable by default
Chris Dumez
Reported
2018-06-07 18:32:47 PDT
PopStateEvent should not be cancelable by default: -
https://github.com/web-platform-tests/wpt/pull/11355
-
https://html.spec.whatwg.org/#history-traversal
All other browsers agree with the specification.
Attachments
Patch
(5.62 KB, patch)
2018-06-07 18:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-07 18:34:46 PDT
Created
attachment 342227
[details]
Patch
WebKit Commit Bot
Comment 2
2018-06-07 20:08:20 PDT
Comment on
attachment 342227
[details]
Patch Clearing flags on attachment: 342227 Committed
r232610
: <
https://trac.webkit.org/changeset/232610
>
WebKit Commit Bot
Comment 3
2018-06-07 20:08:21 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-06-07 20:12:50 PDT
<
rdar://problem/40921907
>
Lucas Forschler
Comment 5
2019-02-06 09:18:30 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug