PopStateEvent should not be cancelable by default https://bugs.webkit.org/show_bug.cgi?id=186420

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Resync web-platform-tests after:
https://github.com/web-platform-tests/wpt/pull/11355

* web-platform-tests/html/browsers/browsing-the-web/history-traversal/hashchange_event-expected.txt:
* web-platform-tests/html/browsers/browsing-the-web/history-traversal/hashchange_event.html:
* web-platform-tests/html/browsers/browsing-the-web/history-traversal/popstate_event.html:

Source/WebCore:

PopStateEvent should not be cancelable by default:
- https://github.com/web-platform-tests/wpt/pull/11355
- https://html.spec.whatwg.org/#history-traversal

All other browsers agree with the specification.

No new tests, updated existing tests.

* dom/PopStateEvent.cpp:
(WebCore::PopStateEvent::PopStateEvent):


Canonical link: https://commits.webkit.org/201781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232610 268f45cc-cd09-0410-ab3c-d52691b4dbfc